# revim

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  testdisplay.py
.github/workflows/: revim_test.yml
bench/: COMMAND.md
crossdisplay/: Cargo.toml
crossdisplay/src/: tui.rs
src/: commandline.rs  debuging.rs  dimensions.rs  editor.rs  key_event.rs  keymapper.rs  main.rs  old_main.rs  position.rs  render.rs  screen.rs  support.rs  textbuffer.rs  util.rs
