[package]
name = "revim"
version = "0.0.1"
authors = ["cowboy8625 <cowboy8625@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.14.2"
ropey = "1.1.0"

[profile.release]
debug = true

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/cowboy8625/ReVim" }
is-it-maintained-open-issues = { repository = "https://github.com/cowboy8625/ReVim" }
maintenance = {status = "actively-developed"}
# maintenance = { status = "experimental" }

