[package]
name = "revim"
version = "0.1.0"
authors = ["cowboy8625 <cowboy8625@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ropey = "1.1.0"
clap = "2.33.1"
crossdisplay = { path = "./crossdisplay" }

[workspace]
members = [
    "crossdisplay"
]

[profile.release]
debug = true

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/cowboy8625/ReVim" }
is-it-maintained-open-issues = { repository = "https://github.com/cowboy8625/ReVim" }
maintenance = {status = "actively-developed"}
# maintenance = { status = "experimental" }
